# sloth-cleaner

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.qwen/: settings.json
landing/: index.html  script.js  styles.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src-tauri/src/ai/: mod.rs  model.rs  recommender.rs  trainer.rs
src-tauri/src/cleaner/: engine.rs  mod.rs  rollback.rs  safety.rs
src-tauri/src/database/: migrations.rs  mod.rs  schema.rs
src-tauri/src/os/: macos.rs  windows.rs
src-tauri/src/scanner/: analyzer.rs  categorizer.rs  filesystem.rs  mod.rs
src-tauri/src/utils/: config.rs  logger.rs
src/components/common/: ErrorBoundary.tsx  LoadingSkeleton.tsx  Toast.tsx  ToastContainer.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Card.tsx  Modal.tsx  Progress.tsx  Toggle.tsx  Tooltip.tsx
src/hooks/: useAI.ts  useCleaner.ts  useKeyboardShortcuts.ts  useScanner.ts  useSystemInfo.ts
src/pages/: AIAssistant.tsx  Cleanup.tsx  Dashboard.tsx  History.tsx  Scan.tsx  Settings.tsx
src/stores/: cleanerStore.ts  scannerStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: constants.ts  formatBytes.ts  helpers.ts  tauri.ts
