[package]
name = "sloth-cleaner"
version = "0.1.0"
description = "AI-powered system cleaner for macOS and Windows"
authors = ["SlothCleaner Team"]
license = "MIT"
repository = "https://github.com/yourusername/sloth-cleaner"
edition = "2021"

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Filesystem
walkdir = "2.4"
ignore = "0.4"
globset = "0.4"

# System info
sysinfo = "0.30"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Safe deletion
trash = "3.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
directories = "5.0"
dirs = "5.0"
rayon = "1.8"
parking_lot = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Compression (for snapshots)
flate2 = "1.0"
tar = "0.4"

# Hashing for duplicate detection
md-5 = "0.10"
hex = "0.4"

# Desktop notifications
notify-rust = "4.10"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
